# hyprpacker

./: Cargo.toml  LICENSE  README.md  build-kernel.sh  hyprpacker-schema.json  manifest.example.toml
docker/: kernel.Dockerfile
src/: bootloader.rs  build.rs  build_script.sh  credits.rs  fetch.rs  fs_utils.rs  gc.rs  hash.rs  main.rs  manifest.rs  ovmf_download.rs  prefix_commands.rs  privilage_escalation.rs  size.rs  sources.rs
src/commands/: initrd.rs  mod.rs  vm.rs
src/commands/image/: assemble.rs  mod.rs
src/commands/kernel/: build.rs
src/steps/: build.rs  build_script.sh
