[package]
name = "hyprpacker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["cargo", "color", "derive"] }
colored = "3.0.0"
flate2 = "1.1.2"

serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.17"
threadpool = "1.8.1"
toml = "0.9.7"
ureq = "3.1.2"
zstd = "0.13.3"
